# RT-TM

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/: Prixonian_Kinematics.md
.github/workflows/: Build-Sanitized.yml  Build.yml
Documentation/: Core.md  Core_Api.md
include/rt_tm/: index.hpp  op_graph.hpp
include/rt_tm/common/: allocator.hpp  array.hpp  common.hpp  config.hpp  core.hpp  debugging_io.hpp  device.hpp  input_session.hpp  iterator.hpp  memory_buffer.hpp  model_core.hpp  model_graph.hpp  model_parser.hpp  op_core.hpp
include/rt_tm/cpu/: cpu_op_core.hpp  detect_isa.hpp
source/rt_tm/cpu/: CMakeLists.txt
source/rt_tm/cpu/arm_neon/: CMakeLists.txt
source/rt_tm/cpu/arm_sve/: CMakeLists.txt
source/rt_tm/cpu/avx_2/: CMakeLists.txt
source/rt_tm/cpu/avx_512/: CMakeLists.txt
tests/vs-llama/: CMakeLists.txt  main.cpp
tests/vs-llama/common/: build-info.cpp
tests/vs-llama/common/cmake/: build-info-gen-cpp.cmake
